client: assert context is not a nullptr when calling async io api

Fixes: https://tracker.ceph.com/issues/63633
Signed-off-by: Dhairya Parmar <dparmar@redhat.com>